- Fixed bug #53568 (swapped memset arguments in struct initialization).